issue_95: hide white space between text and image

--- a/app/assets/stylesheets/cooking/cooking.css.scss
+++ b/app/assets/stylesheets/cooking/cooking.css.scss
@@ -1,12 +1,18 @@
 .recipe{
   //padding: 5px;
-  //background-color:LightGray
   //margin-left:auto;
   //margin-right:auto;
+  background-color:LightGray
   margin-bottom: 10px;
   float:left;
   border: 2px solid grey;
+  .img{
+    margin: 0px;
+    padding: 0px;
+    spacing: 0px;
+  };
   .txt{
+    margin: 0px;
     padding: 5px;
     background-color:LightGray
   }
